--- a/client/index.html
+++ b/client/index.html
@@ -17,39 +17,11 @@
     </div>
     <div id="page-container" class="d-flex flex-column container-fluid">
         <div id="page-content">
+
+            <!-- ERIN START -->
+
             <!-- THIS IS THE HABITS PAGE FOR DAILY AND MONTHLY -->
-            <div id="habits-page" class="page">
-                <div class = "container">
-                    <div class = "row">
-                        <div id = "habit-to-do" class = "col-4" >
-                            <div class = "card" id = "habit-card">
-                                <div class = "card-body">
-                                    <h1 id = "habits-date">DATE</h1>
-                                    <div id = "habits-list">
-                                        <div class = "custom-control custom-checkbox">
-                                            <input type = "checkbox" class = "custom-control-input" id = "check1">
-                                            <label class = "custom-control-label" for = "check1">Habit 1</label>
-                                        </div>
-                                        <div class = "custom-control custom-checkbox">
-                                            <input type = "checkbox" class = "custom-control-input" id = "check2" checked>
-                                            <label class = "custom-control-label" for = "check2">Habit 2</label>
-                                        </div>
-                                        <div class = "custom-control custom-checkbox">
-                                            <input type = "checkbox" class = "custom-control-input" id = "check3" checked>
-                                            <label class = "custom-control-label" for = "check3">Habit 3</label>
-                                        </div>
-                                    </div>
-                                    <br>
-                                    <div id="add-habit-sub-button" class="add-habit-btn d-flex justify-content-center sub-button-primary">
-                                        <img id="add-button-logo" src="./images/add_logo.png">
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="d-flex justify-content-center" id = "monthly-page-button"> 
-                                <button type = "button" class = "btn btn-light">Monthly View</button>
-                            </div>
-                        </div>
+            <div id="habits-page" class="page container">
 
                         <div id = "daily-photos" class = "col-8">
                             <div class = "card" style="background-color:lightgray;">
@@ -82,7 +54,7 @@
                         </div>
                     </div>
 
-                </div>
+                
             
             </div>
             <div id = "monthly-habits-page" class = "page">
@@ -212,6 +184,9 @@
                     </div>
                 </div>
             </div>
+
+            <!-- ERIN END -->
+
             <div id="pictures-page" class="page">
                 <img class="photo-image" src="./images/pictures_logo.png">
                 <div class="container gallery-container">
