--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
             <!-- ERIN START -->
 
             <!-- THIS IS THE HABITS PAGE FOR DAILY AND MONTHLY -->
-            <div id="habits-page" class="page container">
+            <!-- <div id="habits-page" class="page container">
                 
                     <div class = "row">
                         <div id = "habit-to-do" class = "col-4" >
@@ -214,7 +214,7 @@
                         <button type = "button" class = "btn btn-light">Daily View</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ERIN END -->
 
