--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <!-- Scripts to load -->
     <script src="basic.js" type="module"></script>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/lightbox.css">
+    <link rel="stylesheet" href="css/modal.css">
 </head>
 
 <body>
